Fix social buttons alignment in mobile

--- a/contents/css/styles.css
+++ b/contents/css/styles.css
@@ -213,6 +213,10 @@ hr::before {
   margin-right: 16px;
 }
 
+.hero__social a:last-child {
+  margin-right: 0;
+}
+
 .hero__social-icon {
   fill: #fff;
   height: 24px;
